openFeign功能完善，建议每个Module都开启openFeign，因为说不好Module之间就会互相依赖、调用

--- a/springcloud-openfeign-user-service/pom.xml
+++ b/springcloud-openfeign-user-service/pom.xml
@@ -46,6 +46,11 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
+    <!--引入json依赖，支持json序列化及反序列化-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-json</artifactId>
+    </dependency>
   </dependencies>
 
   <!--指定下载源和使用SpringCloud的版本-->
